RESOLVED FIXED 175864
[WPE] Some event handlers not working.
https://bugs.webkit.org/show_bug.cgi?id=175864
Summary [WPE] Some event handlers not working.
Carlos Alberto Lopez Perez
Reported 2017-08-22 16:54:14 PDT
The following simple test with the onclick event handler is not working on WPE: https://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_onclick_html
Attachments
Patch (11.96 KB, patch)
2017-08-22 17:54 PDT, Carlos Alberto Lopez Perez
no flags
Patch (22.90 KB, patch)
2017-08-22 18:50 PDT, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2017-08-22 17:40:02 PDT
The previous example is not working because of the frames. WPE is not passing the event correctly to the subframes. Another example that is also not working: https://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_onwheel_addeventlistener
Carlos Alberto Lopez Perez
Comment 2 2017-08-22 17:54:53 PDT
Michael Catanzaro
Comment 3 2017-08-22 18:07:11 PDT
Comment on attachment 318837 [details] Patch Good work, but it seems now the files are identical except for EventHandler::shouldTurnVerticalTicksIntoHorizontal, right? Or nearly so? We should merge these files and use #if PLATFORM(GTK) where necessary to avoid duplicate code.
Carlos Alberto Lopez Perez
Comment 4 2017-08-22 18:50:29 PDT
WebKit Commit Bot
Comment 5 2017-08-23 08:16:27 PDT
Comment on attachment 318844 [details] Patch Clearing flags on attachment: 318844 Committed r221075: <http://trac.webkit.org/changeset/221075>
WebKit Commit Bot
Comment 6 2017-08-23 08:16:29 PDT
All reviewed patches have been landed. Closing bug.
Carlos Garcia Campos
Comment 7 2017-08-28 00:54:21 PDT
Comment on attachment 318844 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=318844&action=review > Source/WebCore/PlatformGTK.cmake:149 > + platform/glib/EventHandlerGlib.cpp I think we agreed on using GLib instead of Glib, at least for new files. But anyway, I don't think GLib is a good name for this file, since it doesn't use glib at all, and it was not GTK because it used GTK+, but because it was the GTK port implementation of event handler.
Carlos Alberto Lopez Perez
Comment 8 2017-08-28 02:59:12 PDT
(In reply to Carlos Garcia Campos from comment #7) > Comment on attachment 318844 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=318844&action=review > > > Source/WebCore/PlatformGTK.cmake:149 > > + platform/glib/EventHandlerGlib.cpp > > I think we agreed on using GLib instead of Glib, at least for new files. But > anyway, I don't think GLib is a good name for this file, since it doesn't > use glib at all, and it was not GTK because it used GTK+, but because it was > the GTK port implementation of event handler. I agree that GLib is likely not the best name, but I don't have a better proposal. What would be a good name in your opinion?
Carlos Garcia Campos
Comment 9 2017-08-28 03:20:08 PDT
(In reply to Carlos Alberto Lopez Perez from comment #8) > (In reply to Carlos Garcia Campos from comment #7) > > Comment on attachment 318844 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=318844&action=review > > > > > Source/WebCore/PlatformGTK.cmake:149 > > > + platform/glib/EventHandlerGlib.cpp > > > > I think we agreed on using GLib instead of Glib, at least for new files. But > > anyway, I don't think GLib is a good name for this file, since it doesn't > > use glib at all, and it was not GTK because it used GTK+, but because it was > > the GTK port implementation of event handler. > > I agree that GLib is likely not the best name, but I don't have a better > proposal. > > What would be a good name in your opinion? Maybe Linux, but it could be that a windows implementation using GTK+ would be the same as the current GTK port implementation, so I'm not sure...
Michael Catanzaro
Comment 10 2017-08-28 04:27:35 PDT
I think GLib is the best suffix to use for these cases. We all agree the file doesn't use GLib, but it seems like the best suffix to use for WPE + GTK.
Carlos Alberto Lopez Perez
Comment 11 2017-08-28 07:21:06 PDT
(In reply to Carlos Garcia Campos from comment #7) > > Source/WebCore/PlatformGTK.cmake:149 > > + platform/glib/EventHandlerGlib.cpp > > I think we agreed on using GLib instead of Glib, at least for new files. I was not aware of this, I just followed (what it looked to me) the pattern the other files there followed. I can upload a follow-up patch renaming this (or maybe upload a more general patch renaming everything to avoid future confusions like this one)
Carlos Garcia Campos
Comment 12 2017-08-28 07:41:29 PDT
(In reply to Carlos Alberto Lopez Perez from comment #11) > (In reply to Carlos Garcia Campos from comment #7) > > > Source/WebCore/PlatformGTK.cmake:149 > > > + platform/glib/EventHandlerGlib.cpp > > > > I think we agreed on using GLib instead of Glib, at least for new files. > > I was not aware of this, I just followed (what it looked to me) the pattern > the other files there followed. > > I can upload a follow-up patch renaming this (or maybe upload a more general > patch renaming everything to avoid future confusions like this one) I don't think it makes sense to rename all files, we should just make sure we follow the rule for new files. Since this one is still new, feel free to rename it in an unreviewed commit.
Carlos Alberto Lopez Perez
Comment 13 2017-08-28 09:37:40 PDT
Note You need to log in before you can comment on or make changes to this bug.