[WPE] Some event handlers not working. https://bugs.webkit.org/show_bug.cgi?id=175864

* This is a backport of https://trac.webkit.org/changeset/221075